Reformat code