@@ -10,7 +10,6 @@ import java.util.Objects;
 import java.util.StringJoiner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
 import org.jabref.logic.formatter.Formatters;
 import org.jabref.logic.formatter.IdentityFormatter;
 import org.jabref.logic.formatter.bibtexfields.ConvertMSCCodesFormatter;
@@ -31,7 +30,6 @@ import org.jabref.model.entry.field.FieldFactory;
 import org.jabref.model.entry.field.InternalField;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.strings.StringUtil;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -44,7 +42,9 @@ public class FieldFormatterCleanups {
     public static final String ENABLED = "enabled";
     public static final String DISABLED = "disabled";
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(FieldFormatterCleanups.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(
+        FieldFormatterCleanups.class
+    );
 
     /**
      * This parses the key/list map of fields and clean up actions for the field.
@@ -57,36 +57,83 @@ public class FieldFormatterCleanups {
      * <p>
      * Example: <code>pages[normalize_page_numbers]title[escapeAmpersands,escapeDollarSign,escapeUnderscores,latex_cleanup]</code>
      */
-    private static final Pattern FIELD_FORMATTER_CLEANUP_PATTERN = Pattern.compile("([^\\[]+)\\[([^]]+)]");
+    private static final Pattern FIELD_FORMATTER_CLEANUP_PATTERN =
+        Pattern.compile("([^\\[]+)\\[([^]]+)]");
 
     static {
         DEFAULT_SAVE_ACTIONS = List.of(
-                new FieldFormatterCleanup(StandardField.PAGES, new NormalizePagesFormatter()),
-                new FieldFormatterCleanup(StandardField.DATE, new NormalizeDateFormatter()),
-                new FieldFormatterCleanup(StandardField.MONTH, new NormalizeMonthFormatter()),
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new ReplaceUnicodeLigaturesFormatter()),
-                new FieldFormatterCleanup(StandardField.KEYWORDS, new ConvertMSCCodesFormatter()),
-                new FieldFormatterCleanup(StandardField.ISSN, new NormalizeIssn()));
+            new FieldFormatterCleanup(
+                StandardField.PAGES,
+                new NormalizePagesFormatter()
+            ),
+            new FieldFormatterCleanup(
+                StandardField.DATE,
+                new NormalizeDateFormatter()
+            ),
+            new FieldFormatterCleanup(
+                StandardField.MONTH,
+                new NormalizeMonthFormatter()
+            ),
+            new FieldFormatterCleanup(
+                InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                new ReplaceUnicodeLigaturesFormatter()
+            ),
+            new FieldFormatterCleanup(
+                StandardField.KEYWORDS,
+                new ConvertMSCCodesFormatter()
+            ),
+            new FieldFormatterCleanup(StandardField.ISSN, new NormalizeIssn())
+        );
 
-        List<FieldFormatterCleanup> recommendedBibtexFormatters = new ArrayList<>(DEFAULT_SAVE_ACTIONS);
-        recommendedBibtexFormatters.addAll(List.of(
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new HtmlToLatexFormatter()),
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new UnicodeToLatexFormatter()),
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new OrdinalsToSuperscriptFormatter())));
-        RECOMMEND_BIBTEX_ACTIONS = Collections.unmodifiableList(recommendedBibtexFormatters);
+        List<FieldFormatterCleanup> recommendedBibtexFormatters =
+            new ArrayList<>(DEFAULT_SAVE_ACTIONS);
+        recommendedBibtexFormatters.addAll(
+            List.of(
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new HtmlToLatexFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new UnicodeToLatexFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new OrdinalsToSuperscriptFormatter()
+                )
+            )
+        );
+        RECOMMEND_BIBTEX_ACTIONS = Collections.unmodifiableList(
+            recommendedBibtexFormatters
+        );
 
-        List<FieldFormatterCleanup> recommendedBiblatexFormatters = new ArrayList<>(DEFAULT_SAVE_ACTIONS);
-        recommendedBiblatexFormatters.addAll(List.of(
-                new FieldFormatterCleanup(StandardField.TITLE, new HtmlToUnicodeFormatter()),
-                new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new LatexToUnicodeFormatter())));
+        List<FieldFormatterCleanup> recommendedBiblatexFormatters =
+            new ArrayList<>(DEFAULT_SAVE_ACTIONS);
+        recommendedBiblatexFormatters.addAll(
+            List.of(
+                new FieldFormatterCleanup(
+                    StandardField.TITLE,
+                    new HtmlToUnicodeFormatter()
+                ),
+                new FieldFormatterCleanup(
+                    InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD,
+                    new LatexToUnicodeFormatter()
+                )
+            )
+        );
         // DO NOT ADD OrdinalsToSuperscriptFormatter here, because this causes issues. See https://github.com/JabRef/jabref/issues/2596.
-        RECOMMEND_BIBLATEX_ACTIONS = Collections.unmodifiableList(recommendedBiblatexFormatters);
+        RECOMMEND_BIBLATEX_ACTIONS = Collections.unmodifiableList(
+            recommendedBiblatexFormatters
+        );
     }
 
     private final boolean enabled;
     private final List<FieldFormatterCleanup> actions;
 
-    public FieldFormatterCleanups(boolean enabled, List<FieldFormatterCleanup> actions) {
+    public FieldFormatterCleanups(
+        boolean enabled,
+        List<FieldFormatterCleanup> actions
+    ) {
         this.enabled = enabled;
         this.actions = Objects.requireNonNull(actions);
     }
@@ -94,7 +141,10 @@ public class FieldFormatterCleanups {
     /**
      * Note: String parsing is done at {@link FieldFormatterCleanups#parse(String)}
      */
-    public static String getMetaDataString(List<FieldFormatterCleanup> actionList, String newLineSeparator) {
+    public static String getMetaDataString(
+        List<FieldFormatterCleanup> actionList,
+        String newLineSeparator
+    ) {
         // First, group all formatters by the field for which they apply
         // Order of the list should be kept
         Map<Field, List<String>> groupedByField = new LinkedHashMap<>();
@@ -115,7 +165,11 @@ public class FieldFormatterCleanups {
         for (Map.Entry<Field, List<String>> entry : groupedByField.entrySet()) {
             result.append(entry.getKey().getName());
 
-            StringJoiner joiner = new StringJoiner(",", "[", "]" + newLineSeparator);
+            StringJoiner joiner = new StringJoiner(
+                ",",
+                "[",
+                "]" + newLineSeparator
+            );
             entry.getValue().forEach(joiner::add);
             result.append(joiner);
         }
@@ -158,35 +212,40 @@ public class FieldFormatterCleanups {
         List<FieldFormatterCleanup> result = new ArrayList<>();
 
         // first remove all newlines for easier parsing
-        String formatterStringWithoutLineBreaks = StringUtil.unifyLineBreaks(formatterString, "");
+        String formatterStringWithoutLineBreaks = StringUtil.unifyLineBreaks(
+            formatterString,
+            ""
+        );
 
-        Matcher matcher = FIELD_FORMATTER_CLEANUP_PATTERN.matcher(formatterStringWithoutLineBreaks);
+        Matcher matcher = FIELD_FORMATTER_CLEANUP_PATTERN.matcher(
+            formatterStringWithoutLineBreaks
+        );
         while (matcher.find()) {
             String fieldKey = matcher.group(1);
             Field field = FieldFactory.parseField(fieldKey);
 
             String fieldString = matcher.group(2);
 
-            List<FieldFormatterCleanup> fieldFormatterCleanups = Arrays.stream(fieldString.split(","))
-                                                                       .map(FieldFormatterCleanups::getFormatterFromString)
-                                                                       .map(formatter -> new FieldFormatterCleanup(field, formatter))
-                                                                       .toList();
+            List<FieldFormatterCleanup> fieldFormatterCleanups = Arrays.stream(
+                fieldString.split(",")
+            )
+                .map(FieldFormatterCleanups::getFormatterFromString)
+                .map(formatter -> new FieldFormatterCleanup(field, formatter))
+                .toList();
             result.addAll(fieldFormatterCleanups);
         }
         return result;
     }
 
     static Formatter getFormatterFromString(String formatterName) {
-        return Formatters
-                .getFormatterForKey(formatterName)
-                .orElseGet(() -> {
-                    if (!"identity".equals(formatterName)) {
-                        // The identity formatter is not listed in the formatters list, but is still valid
-                        // Therefore, we log errors in other cases only
-                        LOGGER.info("Formatter {} not found.", formatterName);
-                    }
-                    return new IdentityFormatter();
-                });
+        return Formatters.getFormatterForKey(formatterName).orElseGet(() -> {
+            if (!"identity".equals(formatterName)) {
+                // The identity formatter is not listed in the formatters list, but is still valid
+                // Therefore, we log errors in other cases only
+                LOGGER.info("Formatter {} not found.", formatterName);
+            }
+            return new IdentityFormatter();
+        });
     }
 
     @Override
@@ -200,16 +259,24 @@ public class FieldFormatterCleanups {
             return true;
         }
         if (obj instanceof FieldFormatterCleanups other) {
-            return Objects.equals(actions, other.actions) && (enabled == other.enabled);
+            return (
+                Objects.equals(actions, other.actions)
+                && (enabled == other.enabled)
+            );
         }
         return false;
     }
 
     @Override
     public String toString() {
-        return "FieldFormatterCleanups{" +
-                "enabled=" + enabled + "," +
-                "actions=" + actions +
-                "}";
+        return (
+            "FieldFormatterCleanups{"
+            + "enabled="
+            + enabled
+            + ","
+            + "actions="
+            + actions
+            + "}"
+        );
     }
 }
